// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<button
  aria-label="Default"
  class="ds-group ds-flex ds-flex-col ds-justify-center  ds-min-w-[110px] ds-items-center ds-gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="ds-size-[72px] ds-rounded-full ds-bg-bg-gray-2 ds-text-black group-hover:ds-text-accent ds-flex ds-items-center ds-justify-center material-symbols-outlined size-48 ds-select-none"
  >
    target
  </span>
  <span
    class="ds-text-button-sm ds-text-black group-hover:ds-text-accent group-hover:ds-underline"
  >
    Default
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<button
  aria-label="Disabled, non-selected"
  class="ds-group ds-flex ds-flex-col ds-justify-center  ds-min-w-[110px] ds-items-center ds-gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="ds-size-[72px] ds-rounded-full ds-bg-bg-gray-2 ds-text-black group-hover:ds-text-accent ds-flex ds-items-center ds-justify-center material-symbols-outlined size-48 ds-select-none"
  >
    target
  </span>
  <span
    class="ds-text-button-sm ds-text-black group-hover:ds-text-accent group-hover:ds-underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<button
  aria-label="Disabled, non-selected"
  class="ds-group ds-flex ds-flex-col ds-justify-center  ds-min-w-[110px] ds-items-center ds-gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="ds-size-[72px] ds-rounded-full ds-bg-accent ds-text-white ds-flex ds-items-center ds-justify-center material-symbols-outlined size-48 ds-select-none"
  >
    target
  </span>
  <span
    class="ds-text-button-sm ds-text-accent group-hover:ds-text-accent group-hover:ds-underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<button
  aria-label="Disabled, non-selected"
  class="ds-group ds-flex ds-flex-col ds-justify-center  ds-min-w-[110px] ds-items-center ds-gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="ds-size-[72px] ds-rounded-full ds-bg-accent ds-text-white ds-flex ds-items-center ds-justify-center material-symbols-outlined size-48 ds-select-none"
  >
    target
  </span>
  <span
    class="ds-text-button-sm ds-text-accent group-hover:ds-text-accent group-hover:ds-underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > selected 1`] = `
<button
  aria-label="Selected"
  class="ds-group ds-flex ds-flex-col ds-justify-center  ds-min-w-[110px] ds-items-center ds-gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="ds-size-[72px] ds-rounded-full ds-bg-accent ds-text-white ds-flex ds-items-center ds-justify-center material-symbols-outlined size-48 ds-select-none"
  >
    target
  </span>
  <span
    class="ds-text-button-sm ds-text-accent group-hover:ds-text-accent group-hover:ds-underline"
  >
    Selected
  </span>
</button>
`;
